# Emscripten-SDL2-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  FindSDL2.cmake  Makefile  README.md  README.zh_tw.md  export-gh-pages.sh  index.data  index.js  index.wasm
asset/map/: 00.area  00.map  01.map  court.0.map  court.1.map  court.10.map  court.11.map  court.12.map  court.13.map  court.14.map  court.15.map  court.16.map  court.17.map  court.18.map  court.19.map  court.2.map  court.20.map  court.21.map  court.22.map  court.23.map  court.3.map  court.4.map  court.5.map  court.6.map  court.7.map  court.8.map  court.9.map  court.area  front.area  pika-front.map
asset/theme/: 01.toml  court.toml  front.toml
src/: CMakeLists.txt  Makefile  animation.hpp  app.hpp  area.hpp  basic_headers.hpp  cache_container.hpp  camera.hpp  compile_time_utility.hpp  decl.hpp  decltime.hpp  element.hpp  enable_instance.hpp  enum_operator.hpp  event.hpp  fps.hpp  keyboard_state.hpp  main.cpp  map.hpp  movable.hpp  point.hpp  rect.hpp  theme.hpp  theme_animation.hpp  tile.hpp  utility.hpp
src/element_effects/: amplify.hpp  base.hpp  collection.hpp  compose.hpp  fade.hpp  register.hpp  show.hpp  utility.hpp
src/elements/: ball.hpp  fence.hpp  floating.hpp  movable.hpp  obstacle.hpp  option.hpp  option_group.hpp  player.hpp  register.hpp  score_counter.hpp  text.hpp  wobble.hpp
src/themes/: court.hpp  front_page.hpp  stage.hpp
